# dewey

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml
data/repos/100061716/: readme.json  repo.json  summary.txt
data/repos/100435302/: readme.json  repo.json  summary.txt
data/repos/10056929/: readme.json  repo.json  summary.txt
data/repos/10070738/: readme.json  repo.json  summary.txt
data/repos/100781035/: readme.json  repo.json  summary.txt
data/repos/10082287/: readme.json  repo.json  summary.txt
data/repos/10087975/: readme.json  repo.json  summary.txt
data/repos/100982449/: readme.json  repo.json  summary.txt
data/repos/101033179/: readme.json  repo.json  summary.txt
data/repos/101296881/: readme.json  repo.json  summary.txt
data/repos/101341599/: readme.json  repo.json  summary.txt
data/repos/10151705/: readme.json  repo.json  summary.txt
data/repos/101583429/: readme.json  repo.json  summary.txt
data/repos/10166531/: readme.json  repo.json  summary.txt
data/repos/10186000/: readme.json  repo.json  summary.txt
data/repos/102222927/: readme.json  repo.json  summary.txt
data/repos/102234516/: readme.json  repo.json  summary.txt
data/repos/102601749/: readme.json  repo.json  summary.txt
data/repos/10270250/: readme.json  repo.json  summary.txt
data/repos/10270722/: readme.json  repo.json  summary.txt
data/repos/102773976/: readme.json  repo.json  (+1 more)
lib/: clusterer.py  copilot.py  embbed.py  env.py  gemini.py  generate_summaries.py  labe_namer.py  llm.py  ollama.py  reducer.py  repo_data.py  repo_fetcher.py  viz.py
(+8544 files in other folders)
